# Thermal

./: CMakeLists.txt  README.md  fifo.py  fifo2D.py  main_cond.cpp  main_cond_2d.cpp  main_conv.cpp
Examples/: CMakeLists.txt  main_cond.cpp  main_cond_2d.cpp  main_conv.cpp  parameters.h
Thermal/: CMakeLists.txt  thermal.cpp  thermal.h  thermal_1d.cpp  thermal_1d.h  thermal_2d.cpp  thermal_2d.h  thermal_data.h
docs/: CMakeLists.txt  Doxyfile  Doxyfile.in  conf.py  index.rst
